--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Agency - Start Bootstrap Theme</title>
+  <title>Gabriel Tanasovici Nardy</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Gabriel Tanasovici Nardy</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -46,9 +46,11 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
-          </li>
+          <!––
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+            </li>
+          -->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
@@ -68,6 +70,7 @@
     </div>
   </header>
 
+  <!–– 
   <!-- Services -->
   <section class="page-section" id="services">
     <div class="container">
@@ -105,6 +108,7 @@
       </div>
     </div>
   </section>
+  -->
 
   <!-- Portfolio Grid -->
   <section class="bg-light page-section" id="portfolio">
@@ -286,6 +290,7 @@
   </section>
 
   <!-- Team -->
+  <!–– 
   <section class="bg-light page-section" id="team">
     <div class="container">
       <div class="row">
@@ -375,7 +380,9 @@
       </div>
     </div>
   </section>
-
+  -->
+  
+  <!–– 
   <!-- Clients -->
   <section class="py-5">
     <div class="container">
@@ -403,7 +410,9 @@
       </div>
     </div>
   </section>
+  -->
 
+  <!–– 
   <!-- Contact -->
   <section class="page-section" id="contact">
     <div class="container">
@@ -448,6 +457,7 @@
       </div>
     </div>
   </section>
+  -->
 
   <!-- Footer -->
   <footer class="footer">
