--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/estacao-liberdade.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4>Estação Liberdade</h4>
+            <p class="text-muted">A short Horror/Thriller game developed in 24 hours that goes on a scary subway</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -145,11 +145,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/bowmaster-realm.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4>Bowmaster Realm</h4>
+            <p class="text-muted">A Bowmaster Prelude recriation made in Unreal with sprites</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -159,11 +159,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/flappy-cow.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
+            <h4>Flappy Cow</h4>
+            <p class="text-muted">Developed for a University class using C#</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -173,11 +173,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/the-seller.png" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
+            <p class="text-muted">Developed for a University class using C#</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
