--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Welcome to my Personal Page!</div>
         <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Scroll down</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Check out my work!n</a>
       </div>
     </div>
   </header>
@@ -120,7 +120,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Portfolio - Game Development</h2>
-          <h3 class="section-subheading text-muted">Games developed by me.</h3>
+          <h3 class="section-subheading text-muted">Games developed by me</h3>
         </div>
       </div>
       <div class="row">
@@ -136,6 +136,20 @@
           <div class="portfolio-caption">
             <h4>Estação Liberdade</h4>
             <p class="text-muted">A short Horror/Thriller game developed in 24 hours that goes on a scary subway</p>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/justcauserp.png" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>Just Cause 3 - Roleplay</h4>
+            <p class="text-muted">A modification for Just Cause 3 - Multiplayer with Roleplay gameplay</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -176,7 +190,7 @@
             <img class="img-fluid" src="img/portfolio/the-seller.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Lines</h4>
+            <h4>The Seller - An unexpected price</h4>
             <p class="text-muted">Developed for a University class using C#</p>
           </div>
         </div>
@@ -219,7 +233,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Portfolio - Software Development</h2>
-          <h3 class="section-subheading text-muted">Softwares developed by me.</h3>
+          <h3 class="section-subheading text-muted">Softwares developed by me</h3>
         </div>
       </div>
       <div class="row">
