--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/agency.min.css" rel="stylesheet">
+  <link href="css/agency.css" rel="stylesheet">
 
 </head>
 
@@ -69,7 +69,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Welcome to my Personal Page!</div>
         <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Check out my work!n</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Check out my work!</a>
       </div>
     </div>
   </header>
