--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
               </div>
             </li>
             <li>
-              <div class="timeline-image">
+              <div class="timeline-panel">
                 <img class="rounded-circle img-fluid" src="img/about/tokenlab.png" alt="">
               </div>
               <div class="timeline-panel">
