--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <title>Gabriel Tanasovici Nardy</title>
 
+  <link rel="shortcut icon" href="img/favico.jpg">
+  
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
