--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2016-Today</h4>
+                  <h4>2016 - Today</h4>
                   <h4 class="subheading">UFSCar - Computer Science</h4>
                 </div>
                 <div class="timeline-body">
@@ -381,8 +381,8 @@
                 </div>
               </div>
             </li>
-            <li>
-              <div class="timeline-panel">
+            <li class="timeline-inverted">
+              <div class="timeline-image">
                 <img class="rounded-circle img-fluid" src="img/about/tokenlab.png" alt="">
               </div>
               <div class="timeline-panel">
@@ -401,7 +401,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>July 2019-Today</h4>
+                  <h4>July 2019 - Today</h4>
                   <h4 class="subheading">Nanos World</h4>
                 </div>
                 <div class="timeline-body">
