--- a/index.html
+++ b/index.html
@@ -154,6 +154,20 @@
             <p class="text-muted">A modification for Just Cause 3 - Multiplayer with Roleplay gameplay</p>
           </div>
         </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/nanos-heightmap.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>Nanos World</h4>
+            <p class="text-muted">Work in Progress</p>
+          </div>
+        </div>        
         <div class="col-md-3 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
             <div class="portfolio-hover">
