--- a/index.html
+++ b/index.html
@@ -650,12 +650,12 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase">Estação Liberdade Name</h2>
+                <p class="item-intro text-muted">A short Horror/Thriller game developed in 24 hours that goes on a scary subway</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/estacao-liberdade.jpg" alt="">
+                <p>Developed for a 24 hour Game Jam with Free Marketplace Assets using Unreal Engine 4.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
+                  <li>Release: September 2019</li>
                   <li>Client: Threads</li>
                   <li>Category: Illustration</li>
                 </ul>
