--- a/index.html
+++ b/index.html
@@ -650,14 +650,16 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Estação Liberdade Name</h2>
+                <h2 class="text-uppercase">Estação Liberdade</h2>
                 <p class="item-intro text-muted">A short Horror/Thriller game developed in 24 hours that goes on a scary subway</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/estacao-liberdade.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/estacao-liberdade.png" alt="">
                 <p>Developed for a 24 hour Game Jam with Free Marketplace Assets using Unreal Engine 4.</p>
                 <ul class="list-inline">
                   <li>Release: September 2019</li>
+                  <!--
                   <li>Client: Threads</li>
                   <li>Category: Illustration</li>
+                  -->
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
