--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <img class="img-fluid" src="img/portfolio/nanos-heightmap.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Nanos World</h4>
+            <h4>nanos world</h4>
             <p class="text-muted">Work in Progress</p>
           </div>
         </div>        
@@ -656,6 +656,7 @@
                 <p>Developed for a 24 hour Game Jam with Free Marketplace Assets using Unreal Engine 4.</p>
                 <ul class="list-inline">
                   <li>Release: September 2019</li>
+                  <li>Site: <a>https://gtnardy.itch.io/estacao-liberdade</a></li>
                   <!--
                   <li>Client: Threads</li>
                   <li>Category: Illustration</li>
@@ -686,14 +687,25 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
+                <h2 class="text-uppercase"> Cause 3 - Roleplay</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/justcauserp.jpg" alt="">
+                <p>
+                  Opened in the middle of 2017, we had the task of creating a complete roleplay server, modeling it into a giant similar to the olds SA-MP Roleplay servers. With the help of all community, we were adding aspects of other games like MTA, ARMA and GTA:V to however have the largest Roleplay server ever!
+                </p>
+                <p>
+                  Begin from ZERO: get jobs; be promoted; level up; buy houses and stuff; become the tycoon; customize your vehicle at Pay'n Spray; run away from the police; arrest bandits and rebels; dominate military bases; play with friend and MUCH MORE!
+                </p>
+                <p>
+                  What you can expect from the server: Custom Jobs, Player-made Races (with a Race Creator), Leveling-up and Money Systems, Buyable Houses, Hunger and Thirst Necessities, Fuel System (with functional Gas Stations), Weapon Store, Wanted Levels System, Police/Military/Rebels Jobs and much more! 
+                </p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
+                  <li>Date: 2014 - Today</li>
+                  <li>Site: <a>http://justcauserp.com</a></li>
+                  <!--
                   <li>Client: Explore</li>
                   <li>Category: Graphic Design</li>
+                  -->
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -720,14 +732,15 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
+                <h2 class="text-uppercase">nanos world</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world2.jpg" alt="">
+                <p>
+                  nanos world is the next generation multiplayer sandbox game created by you and nanos. We do this by allowing players, developers and modders themselves to build their own game upon and to integrate their work in nanos world. Built upon Unreal Engine 4 (UE4), nanos framework and our experience, especially from Just Cause 3: Multiplayer, you can turn your world into whatever you’d like. Bringing all participants to the table, players can join thousands of different worlds and thousands of different game modes with only one game and everybody can contribute to our common project.
+                </p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Finish</li>
-                  <li>Category: Identity</li>
+                  <li>Release: TBD</li>
+                  <li>Site: <a>https://nanos.world/<a></li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
