--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
@@ -155,7 +155,7 @@
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
@@ -165,11 +165,11 @@
           </a>
           <div class="portfolio-caption">
             <h4>nanos world</h4>
-            <p class="text-muted">Work in Progress</p>
+            <p class="text-muted">Next generation multiplayer sandbox game</p>
           </div>
         </div>        
         <div class="col-md-3 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
@@ -183,7 +183,7 @@
           </div>
         </div>
         <div class="col-md-3 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
@@ -197,7 +197,7 @@
           </div>
         </div>
         <div class="col-md-3 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
@@ -656,7 +656,7 @@
                 <p>Developed for a 24 hour Game Jam with Free Marketplace Assets using Unreal Engine 4.</p>
                 <ul class="list-inline">
                   <li>Release: September 2019</li>
-                  <li>Site: <a>https://gtnardy.itch.io/estacao-liberdade</a></li>
+                  <li>Site: <a href="https://gtnardy.itch.io/estacao-liberdade">https://gtnardy.itch.io/estacao-liberdade</a></li>
                   <!--
                   <li>Client: Threads</li>
                   <li>Category: Illustration</li>
@@ -701,7 +701,7 @@
                 </p>
                 <ul class="list-inline">
                   <li>Date: 2014 - Today</li>
-                  <li>Site: <a>http://justcauserp.com</a></li>
+                  <li>Site: <a href="http://justcauserp.com">http://justcauserp.com</a></li>
                   <!--
                   <li>Client: Explore</li>
                   <li>Category: Graphic Design</li>
@@ -733,14 +733,14 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">nanos world</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <p class="item-intro text-muted">Next generation multiplayer sandbox game</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/nanos-world2.jpg" alt="">
                 <p>
                   nanos world is the next generation multiplayer sandbox game created by you and nanos. We do this by allowing players, developers and modders themselves to build their own game upon and to integrate their work in nanos world. Built upon Unreal Engine 4 (UE4), nanos framework and our experience, especially from Just Cause 3: Multiplayer, you can turn your world into whatever you’d like. Bringing all participants to the table, players can join thousands of different worlds and thousands of different game modes with only one game and everybody can contribute to our common project.
                 </p>
                 <ul class="list-inline">
                   <li>Release: TBD</li>
-                  <li>Site: <a>https://nanos.world/<a></li>
+                  <li>Site: <a href="https://nanos.world/">https://nanos.world/<a></li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
