--- a/index.html
+++ b/index.html
@@ -332,10 +332,10 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>2013 - 2014</h4>
-                  <h4 class="subheading">COTUCA - Colégio Técnico de Campinas - UNICAMP</h4>
+                  <h4 class="subheading">COTUCA - UNICAMP</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">Colégio Técnico de Campinas is a technical college subortinate to UNICAMP, located in Campinas, state of São Paulo, Brazil. Where I took a Computer Technician course, getting my first contact to Computation.</p>
                 </div>
               </div>
             </li>
@@ -349,7 +349,7 @@
                   <h4 class="subheading">Internship at CI&T</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">CI&T is a nearshore information technology and software engineering company. Where I did my first Internship working with insurance companies softwares.</p>
                 </div>
               </div>
             </li>
@@ -363,7 +363,7 @@
                   <h4 class="subheading">UFSCar - Computer Science</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">The Federal University of São Carlos (Portuguese: Universidade Federal de São Carlos, UFSCar) is a public research university located in São Carlos, state of São Paulo, Brazil.</p>
                 </div>
               </div>
             </li>
@@ -374,10 +374,10 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>2018 - Today</h4>
-                  <h4 class="subheading">TokenLab - Internship</h4>
+                  <h4 class="subheading">Tokenlab - Internship</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">Tokenlab is a specializated company in digital solutions.</p>
                 </div>
               </div>
             </li>
@@ -388,10 +388,10 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>July 2019 - Today</h4>
-                  <h4 class="subheading">Nanos World</h4>
+                  <h4 class="subheading">nanos world</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">nanos world is the next generation multiplayer sandbox game created.</p>
                 </div>
               </div>
             </li>
