--- a/index.html
+++ b/index.html
@@ -687,9 +687,9 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase"> Cause 3 - Roleplay</h2>
+                <h2 class="text-uppercase">Just Cause 3 - Roleplay</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/justcauserp.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/justcauserp.png" alt="">
                 <p>
                   Opened in the middle of 2017, we had the task of creating a complete roleplay server, modeling it into a giant similar to the olds SA-MP Roleplay servers. With the help of all community, we were adding aspects of other games like MTA, ARMA and GTA:V to however have the largest Roleplay server ever!
                 </p>
