--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Portfolio - Game Development</h2>
-          <h3 class="section-subheading text-muted">Games developed by me</h3>
+          <h3 class="section-subheading text-muted">Games I worked on</h3>
         </div>
       </div>
       <div class="row">
@@ -221,7 +221,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Portfolio - Software Development</h2>
-          <h3 class="section-subheading text-muted">Softwares developed by me</h3>
+          <h3 class="section-subheading text-muted">Softwares I worked on</h3>
         </div>
       </div>
       <div class="row">
@@ -232,11 +232,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/fumcad.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4>DoeFUMCAD</h4>
+            <p class="text-muted">DoeFUMCAD is a site/app to make it easier for residents to donate to their city's charitable funds</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -246,11 +246,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/futmesapro.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4>Futmesa PRO</h4>
+            <p class="text-muted">An app to follow matches, standings and scorers of São Paulo Button Futeball Club Championship</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -374,7 +374,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>2018 - Today</h4>
-                  <h4 class="subheading">Tokenlab - Internship</h4>
+                  <h4 class="subheading">Internship at Tokenlab</h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">Tokenlab is a specializated company in digital solutions.</p>
