--- a/index.html
+++ b/index.html
@@ -210,6 +210,34 @@
             <p class="text-muted">Developed for a University class using C#</p>
           </div>
         </div>
+        <div class="col-md-3 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/brasilroleplay.png" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h5>Just Cause 2 - Brasil Roleplay</h5>
+            <p class="text-muted">The first Roleplay i've created</p>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-3 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/flascii.png" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h6>FLASCII BIRD</h6>
+            <p class="text-muted">A(nother) Flappy Bird recriation made in Assembly</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -274,11 +302,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/picole.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
+            <h4>Picole</h4>
+            <p class="text-muted">An application for teaching intellectual disabilities with games</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -599,28 +627,38 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">Copyright &copy; Gabriel T. Nardy 2019</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
+              <a href="https://www.instagram.com/gtnardy/">
+                <i class="fab fa-instagram"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.facebook.com/gtnardy/">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-linkedin-in"></i>
+              <a href="https://www.itch.io/gtnardy/">
+                <i class="fab fa-itch-io"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.gitlab.com/gtnardy/">
+                <i class="fab fa-gitlab"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.github.com/gtnardy/">
+                <i class="fab fa-github"></i>
               </a>
             </li>
           </ul>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
               <a href="#">Privacy Policy</a>
@@ -629,7 +667,7 @@
               <a href="#">Terms of Use</a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>
